tests/chapter_18/invalid_types/bad_member_operators/bad_member.c
struct s {
    int x;
    int y;
};

int main(void) {
    struct s foo = {1, 2};
    return foo.blah;
}